ci: generate ci.yml with the zio-sbt-ci plugin
The CI workflow was maintained as hand-written YAML. It is now generated from
job definitions in project/CiWorkflow.scala by `sbt ciGenerateGithubWorkflow`.

The port is deliberately faithful. The toolchain is unchanged -
coursier/setup-action with the pinned jvm-index for the test and release jobs,
actions/setup-java for the docs jobs - so that a CI regression after this change
can only be a porting mistake, not a different runner image or cache key.
Everything load-bearing is preserved: the seven per-job timeouts, the postgres
service and its health check, the three-axis testJVM matrix and its five
conditional lanes, the retry around `sbt ci-release`, the pull-request-scoped
concurrency group, SBT_OPTS in place of JDK_JAVA_OPTIONS, and the
`website-artifact` and `pr-metadata` uploads that deploy-preview.yml consumes.

Verified by diffing the generated workflow against the previous one with keys
sorted and `${{ }}` normalised. The remaining differences are all intended:

  * every job gains `continue-on-error: false` and a `name`, both of which
    match GitHub's defaults for a job that omits them
  * `if:` expressions gain parentheses around composed operands
  * matrix values are quoted, e.g. `17` becomes `'17'`; GitHub coerces the
    string back to a number for `matrix.java == 17` and `matrix.java >= 25`
  * `permissions` moves from the release-docs job to the workflow, where the
    values are the same
  * `workflow_dispatch` is added as a trigger, and `pull_request` gains
    `branches-ignore: [gh-pages]`
  * `shell: bash` is dropped from one step, where it was the default anyway
  * the aggregate job's step is renamed "Report Successful CI"

Because workflow_dispatch is now a trigger, the release job's condition is
spelled out rather than `github.event_name != 'pull_request'`, so that a manual
run cannot publish.

The plugin also generates auto-approve.yml and auto-merge.yml for dependency-bot
PRs. They are new 